--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,15 @@
-LVM_BACKUP_TYPE: "file-level-backup"
-LVM_BACKUP_LIST: "/etc/restic/backup-filelevel.txt"
+---
+
+rescript_lvm_method: file-level-backup
+rescript_lvm_list: ""
+rescript_lvm_usb: false
+rescript_lvm_check: false
+
+## Other available variables
+# rescript_repo_name: ""
+# rescript_lvm_cron_minute: "5"
+# rescript_lvm_cron_hour: "8"
+# rescript_lvm_cron_weekday: "MON-FRI"
+# rescript_lvm_cron_state: "absent"
+# rescript_lvm_cron_job: "chronic /etc/restic/...sh"
+# rescript_lvm_healthcheck_url: "https://example..."
